# projeto5_imc

./: LICENSE  README.md  imc.py  pyproject.toml  questions.py  respostas.csv
.devcontainer/: devcontainer.json
