[tool.poetry]
name = "projeto5-imc"
version = "0.1.0"
description = "Calcular IMC"
authors = ["Maurilio Benevento"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
